--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,13 @@ body {
   
   /* My Styles */
   
-  .page_container {
+  /* .page_container {
     margin: 0% 2%;
-  }
+  } */
   
-  * {
+  /* * {
     box-sizing: border-box;
-  }
+  } */
   
   /* input[type="text"] {
     width: 100%;
@@ -27,12 +27,12 @@ body {
     resize: vertical;
   } */
   
-  label {
+  /* label {
     padding: 12px 12px 12px 0;
     display: inline-block;
   }
-  
-  button {
+   */
+  /* button {
     margin: 0px 15px;
     color: white;
     padding: 12px 20px;
@@ -40,124 +40,124 @@ body {
     border-radius: 4px;
     cursor: pointer;
     float: right;
-  }
+  } */
   
-  button:hover {
+  /* button:hover {
     background-color: #848784;
-  }
+  } */
   
-  .container {
+  /* .container {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-  }
+  } */
   
-  .col-25 {
+  /* .col-25 {
     float: left;
     width: 25%;
     margin-top: 6px;
-  }
+  } */
   
-  .col-75 {
+  /* .col-75 {
     float: left;
     width: 75%;
     margin-top: 6px;
-  }
+  } */
   
-  .row:after {
+  /* .row:after {
     content: "";
     display: table;
     clear: both;
-  }
+  } */
   
-  @media screen and (max-width: 600px) {
+  /* @media screen and (max-width: 600px) {
     .col-25,
     .col-75,
     button {
       width: 100%;
       margin-top: 0;
     }
-  }
+  } */
   
-  .inner-container {
+  /* .inner-container {
     margin: 0 20%;
-  }
+  } */
   
-  .primary {
+  /* .primary {
     background-color: #2804aa;
-  }
+  } */
   
-  .secondary {
+  /* .secondary {
     background-color: #4e504f;
-  }
+  } */
   
-  .success {
+  /* .success {
     background-color: #04aa6d;
   }
-  
-  .warning {
+   */
+  /* .warning {
     background-color: #e4ab10;
-  }
+  } */
   
-  .danger {
+  /* .danger {
     background-color: #df1a0c;
   }
-  
-  .text-center {
+   */
+  /* .text-center {
     text-align: center;
-  }
+  } */
   
-  .text-padding {
+  /* .text-padding {
     padding: 20px;
   }
-  
-  #tbl {
+   */
+  /* #tbl {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
-  }
+  } */
   
-  #tbl td,
+  /* #tbl td,
   #tbl th {
     border: 1px solid #ddd;
     padding: 8px;
-  }
+  } */
   
-  #tbl tr:nth-child(even) {
+  /* #tbl tr:nth-child(even) {
     background-color: #f2f2f2;
-  }
+  } */
   
-  #tbl tr:hover {
+  /* #tbl tr:hover {
     background-color: #ddd;
-  }
+  } */
   
-  #tbl th {
+  /* #tbl th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: #8264ee;
     color: white;
-  }
+  } */
   
-  .div1 {
+  /* .div1 {
     background-color: white;
     padding: 5vh;
     border: 1px solid gray;
     box-shadow: 0px 2px 5px -2px;
     border-radius: 5px;
     margin: 2% 20%;
-  }
+  } */
   
-  .mis-title1 {
+  /* .mis-title1 {
     background-color: #f9f5f5;
     color: #737373;
     padding: 0 15px;
     border-radius: 50px;
     font-weight: bold;
-  }
+  } */
   
-  .title-header {
-    /* font-weight: bold; */
+  /* .title-header {
+    font-weight: bold;
     font-size: 20px;
     color: #727070;
     background-color: #f6f3f3;
@@ -166,29 +166,29 @@ body {
     border-radius: 5px;
     margin-bottom: 50px;
     box-shadow: -1px 2px 5px -2px;
-    /* text-align: center; */
-    /* text-transform: uppercase; */
-  }
-  .menu-center {
+    text-align: center;
+    text-transform: uppercase;
+  } */
+  /* .menu-center {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-  }
+  } */
   
-  .menu-container {
+  /* .menu-container {
     margin-top: 10px;
-  }
+  } */
   
-  .centerText {
+  /* .centerText {
     text-align: center;
-  }
+  } */
   
-  .editor_width {
+  /* .editor_width {
     width: 70%;
-  }
+  } */
   
-  .vidimg_frame {
+  /* .vidimg_frame {
     width: 50%;
     height: 300px;
     padding: 10px;
@@ -198,169 +198,223 @@ body {
     border: 1px solid #c8c8c8;
     border-radius: 10px;
     overflow: auto;
-  }
-  .delete_media_button {
+  } */
+  /* .delete_media_button {
     text-align: right;
     width: 50%;
     margin: 10px;
     padding: 10px;
-  }
+  } */
   
-  .save_div {
+  /* .save_div {
     width: 100%;
     text-align: right;
-  }
-  .save_button {
+  } */
+  /* .save_button {
     padding: 20px 40px;
     background: greenyellow;
     font-weight: bold;
-  }
-  .preview_outerdiv {
+  } */
+  /* .preview_outerdiv {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .preview_innerdiv {
+  } */
+  /* .preview_innerdiv {
     width: 25%;
     border: 1px solid gray;
     padding: 10px;
     border-radius: 10px;
     height: 500px;
     overflow: auto;
-  }
-  .media_div {
+  } */
+  /* .media_div {
     width: 100%;
     text-align: center;
-  }
-  .media_div img {
+  } */
+  /* .media_div img {
     width: 90%;
-  }
-  .media_div video {
+  } */
+  /* .media_div video {
     width: 90%;
-  }
-  .media_div audio {
+  } */
+  /* .media_div audio {
     width: 90%;
-  }
+  } */
   
-  .passcode {
+  /* .passcode {
     margin: 10px;
     padding: 10px 20px;
     border: 1px solid #b5b1b1;
     width: 95%;
     border-radius: 5px;
-  }
-  .passcode_1yr {
+  } */
+  /* .passcode_1yr {
     width: 60%;
     padding: 10px;
     background-color: powderblue;
-  }
-  .passcode_4mn {
+  } */
+  /* .passcode_4mn {
     width: 60%;
     padding: 10px;
     background-color: lightsteelblue;
-  }
-  .expired {
+  } */
+  /* .expired {
     background-color: #e9e9e9;
-  }
-  .active {
+  } */
+  /* .active {
     background-color: #8de7ae;
-  }
+  } */
   
-  .add_element_menu {
+  /* .add_element_menu {
     padding: 10px;
     display: flex;
     justify-content: center;
-  }
+  } */
   
-  .outer-preview {
+  /* .outer-preview {
     display: flex;
     justify-content: center;
-  }
+  } */
   
-  .inner-preview {
+  /* .inner-preview {
     height: 80vh;
     overflow-y: auto;
     width: 300px;
     padding: 10px;
     border: 1px solid #b5b0b0;
-  }
+  } */
   
-  .preview-card {
+  /* .preview-card {
     padding: 5px;
     border: 1px solid #c1b9b9;
     margin: 5px;
-  }
-  .file {
+  } */
+  /* .file {
     color: transparent;
-  }
-  .form-control {
+  } */
+  /* .form-control {
     margin: 1rem;
     width: 130px;
     display: flex;
     align-items: center;
-  }
+  } */
   
-  .select-menu {
+  /* .select-menu {
     width: 100%;
     text-align: center;
-  }
+  } */
   
-  .select-menu .MuiSelect-select {
+  /* .select-menu .MuiSelect-select {
     padding-left: 0;
   }
-  
-  .quiz-parent-segment-div {
+   */
+  /* .quiz-parent-segment-div {
     padding: 10px;
     margin: 10px;
-  }
-  .quiz-parent-segment-title {
+  } */
+  /* .quiz-parent-segment-title {
     color: gray;
     font-size: 18px;
     font-weight: bold;
     padding: 10px;
-  }
-  .quiz-info {
+  } */
+  /* .quiz-info {
     width: 100%;
     text-align: center;
     font-size: 18px;
     color: #757070;
-  }
+  } */
   
   /* ----------------- form template ----------------- */
   
   
-  .form-container {
+  /* .form-container {
     display: flex;
     flex-direction: column;
     height: 90vh;
-  }
+  } */
   
-  .fixed-div {
+  /* .fixed-div {
     flex: 0 0 auto;
-    /* padding: 20px; */
+    padding: 20px;
     position: sticky;
     top: 0;
-  }
+  } */
   
-  .scrollable-div {
+  /* .scrollable-div {
     flex: 1;
     overflow-y: scroll;
     background-color: #eaeaea;
-  }
+  } */
   
-  .cards-container {
-    /* background-color: #eaeaea; */
+  /* .cards-container {
+    background-color: #eaeaea;
     padding: 10px;
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     flex-direction: column;
-    /* width: 100%; */
+    width: 100%;
     align-items: center;
-  }
+  } */
   
-  .float-right {
+  /* .float-right {
     float: right;
+  } */
+  
+  -------------------------------------------------
+  .App {
+    font-family: sans-serif;
+    text-align: center;
+  }
+  /* App.css */
+  
+  /* Style the navigation links */
+  nav {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
   }
   
-  /* ------------------------------------------------- */
+  nav a {
+    text-decoration: none;
+    color: #fff;
+    margin: 5px;
+  }
+  
+  /* Style the active link */
+  .active {
+    background-color: #ff5733;
+    color: #fff;
+  }
+  
+  .container {
+    display: flex;
+    width: 100%;
+  }
+  
+  /* Left div with 30% width and left padding */
+  .left-div {
+    width: 30%;
+    padding-left: 10px;
+  }
+  
+  /* Right div with 60% width and left padding */
+  .right-div {
+    width: 60%;
+    padding-left: 10px;
+  }
+  
+  /* Just some styling for demonstration purposes */
+  .container,
+  .left-div,
+  .right-div {
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    height: 100px;
+  }
+  /* .headerTypography {
+    flexGrow: 1;
+  }
+   */
