--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 /* My Styles */
@@ -329,7 +332,6 @@ button:hover {
 
 /* ----------------- form template ----------------- */
 
-
 .form-container {
   display: flex;
   flex-direction: column;
@@ -353,6 +355,7 @@ button:hover {
   /* background-color: #eaeaea; */
   padding: 10px;
   display: flex;
+  flex-wrap: wrap;
   /* justify-content: center; */
   flex-direction: column;
   /* width: 100%; */
