--- a/src/ReusableComponents/card.css
+++ b/src/ReusableComponents/card.css
@@ -1,40 +1,23 @@
-.wraper {
-  background: #fff;
-  width: "100%";
-  height: 100px;
-  border-radius: 7px;
-  box-shadow: 0 0 2rem 0 rgba(136, 152, 170, 0.15) !important;
+.card {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  padding: 25px;
-}
-
-h4 {
-  color: #1d3053;
-  flex-wrap: wrap;
-  font-family: "Nuosu SIL", serif;
-  font-family: "Poppins", sans-serif;
-}
-
-h1 {
-  font-size: 1.5rem;
-  color: #393d84;
-  font-family: "Nuosu SIL", serif;
-  font-family: "Poppins", sans-serif;
-}
-
-.icon__cnt {
-  background: green;
-  padding: 10px;
-  border-radius: 50%;
-  width: 45px;
-  height: 45px;
-  display: flex;
   justify-content: center;
-  align-items: centers;
+  height: 100%;
+  padding: 20px;
+  text-align: center;
+  border: 2px solid #eee;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+.icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .icon {
-  font-size: 1.6rem;
-  color: #fff;
+  font-size: 48px;
+  color: #3f51b5; /* Adjust the color as needed */
 }
