--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -39,7 +39,7 @@
 
 .description {
   margin-top: 15px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   text-align: center;
   font-style: normal;
@@ -109,5 +109,8 @@
   .eye-button {
     right: -23px;
     font-size: 14px;
+  }
+  .description {
+    font-size: 16px;
   }
 }
